--- a/web/index.html
+++ b/web/index.html
@@ -31,31 +31,41 @@
 
   <title>barangay_adittion_hills_app</title>
   <link rel="manifest" href="manifest.json">
-  <script>
-   // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: 'AIzaSyCZpHx8ToGB5EYoknfXoquskpewHBIidjE',
-    appId: '1:769077879759:web:78b9778286e08d1c7628ba',
-    messagingSenderId: '769077879759',
-    projectId: 'sampleproject1-2cb77',
-    authDomain: 'sampleproject1-2cb77.firebaseapp.com',
-    storageBucket: 'sampleproject1-2cb77.appspot.com',
-    measurementId: 'G-5FK3DVQP96',
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-  </script>
+  
+  
 </head>
 <body>
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
+
+  <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
+
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-firestore.js"></script>
+  <script>
+
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js'
+   
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    const firebaseConfig = {
+      apiKey: "AIzaSyCZpHx8ToGB5EYoknfXoquskpewHBIidjE",
+      authDomain: "sampleproject1-2cb77.firebaseapp.com",
+      databaseURL: "https://sampleproject1-2cb77-default-rtdb.firebaseio.com",
+      projectId: "sampleproject1-2cb77",
+      storageBucket: "sampleproject1-2cb77.appspot.com",
+      messagingSenderId: "769077879759",
+      appId: "1:769077879759:web:78b9778286e08d1c7628ba",
+      measurementId: "G-5FK3DVQP96"
+    };
+   
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
+  
   <script src="flutter_bootstrap.js" async></script>
+  
 </body>
 </html>
